--- a/ReadingOrderItem.ui
+++ b/ReadingOrderItem.ui
@@ -101,7 +101,7 @@ background-color: rgba(255, 255, 255, 0);
 /* margin: 0px 0px; */</string>
    </property>
    <property name="text">
-    <string>0</string>
+    <string notr="true">0</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -341,6 +341,9 @@ background: #666666;</string>
       <italic>false</italic>
       <bold>false</bold>
      </font>
+    </property>
+    <property name="acceptDrops">
+     <bool>false</bool>
     </property>
     <property name="styleSheet">
      <string notr="true">QLineEdit {
