--- a/TOCListWidgetItem.ui
+++ b/TOCListWidgetItem.ui
@@ -157,6 +157,9 @@ margin: 0px 0px;
      <bold>false</bold>
     </font>
    </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
 	color: #FFFFFF;
